// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a TabbedFacet When it has selected filters and has selected facet, but not focused should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
  border-right: .0625rem solid #9e9e9e;
  background: #f7f7f7;
}

.c3 {
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  white-space: normal;
  text-align: left;
  opacity: 1;
}

.c3 span {
  color: #515151;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: none;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0.375rem;
  margin: auto;
  height: 0.25rem;
  width: 0.25rem;
  background: #30a74b;
  border-radius: 50%;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
    data-testid="plp-tabbed-filter-button-gender"
  >
    <div
      class="c1"
      data-testid="plp-tabbed-facets-selected-dot"
    />
    <div
      class="components__CenteredFlexContainer-sc-1hp5vxi-7 c2"
    >
      <p
        class="MuiTypography-root c3 MuiTypography-body1"
      >
        Gender
      </p>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Given a TabbedFacet When it has selected filters and is focused should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
  border-right: none;
  border-top: .0625rem solid #9e9e9e;
  border-bottom: .0625rem solid #9e9e9e;
  border-left: 0.1875rem solid #000000;
  background: #ffffff;
}

.c2 {
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  white-space: normal;
  text-align: left;
  opacity: 1;
}

.c2 span {
  color: #515151;
}

.c3 {
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  white-space: normal;
  text-align: left;
  opacity: 1;
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #515151;
}

.c3 span {
  color: #515151;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: 0.0625rem solid #eaeaea;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
    data-testid="plp-tabbed-filter-button-gender"
  >
    <div
      class="components__CenteredFlexContainer-sc-1hp5vxi-7 c1"
    >
      <h5
        class="MuiTypography-root c2 MuiTypography-h5"
      >
        Gender
      </h5>
      <p
        class="MuiTypography-root c3 MuiTypography-body1"
        data-testid="plp-tabbed-facets-selected-filter-gender"
      >
        test filter
      </p>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Given a TabbedFacet When it has selected filters and is not focused should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
  border-right: .0625rem solid #9e9e9e;
  background: #f7f7f7;
}

.c2 {
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  white-space: normal;
  text-align: left;
  opacity: 1;
}

.c2 span {
  color: #515151;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: 0.0625rem solid #eaeaea;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
    data-testid="plp-tabbed-filter-button-gender"
  >
    <div
      class="components__CenteredFlexContainer-sc-1hp5vxi-7 c1"
    >
      <p
        class="MuiTypography-root c2 MuiTypography-body1"
      >
        Gender
      </p>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Given a TabbedFacet When it is disabled should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
  border-right: none;
  border-top: .0625rem solid #9e9e9e;
  border-bottom: .0625rem solid #9e9e9e;
  border-left: 0.1875rem solid #000000;
  background: #ffffff;
}

.c2 {
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  white-space: normal;
  text-align: left;
  opacity: 0.4;
}

.c2 span {
  color: #515151;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: 0.0625rem solid #eaeaea;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
    data-testid="plp-tabbed-filter-button-gender"
  >
    <div
      class="components__CenteredFlexContainer-sc-1hp5vxi-7 c1"
    >
      <h5
        class="MuiTypography-root c2 MuiTypography-h5"
        disabled=""
      >
        Gender
      </h5>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Given a TabbedFacet when 'noBorder' prop is not passed should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
}

.c2 {
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  white-space: normal;
  text-align: left;
  opacity: 1;
}

.c2 span {
  color: #515151;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: 0.0625rem solid #eaeaea;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
    data-testid="plp-tabbed-filter-button-gender"
  >
    <div
      class="components__CenteredFlexContainer-sc-1hp5vxi-7 c1"
    >
      <p
        class="MuiTypography-root c2 MuiTypography-body1"
      >
        Gender
      </p>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Given a TabbedFacet when 'noBorder' prop is passed should match the snapshot correctly 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  border: none;
  padding: 0;
  background: transparent;
  -webkit-tap-highlight-color: transparent;
  width: 100%;
  margin: 0;
  min-height: -webkit-min-content;
  min-height: -moz-min-content;
  min-height: min-content;
  padding: 0 1rem;
  position: relative;
  outline-offset: -0.13rem;
  margin: 0;
}

.c2 {
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
  white-space: normal;
  text-align: left;
  opacity: 1;
}

.c2 span {
  color: #515151;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex: 1 auto;
  display: -webkit-flex;
  border-bottom: none;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.65rem 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<button
    class="components__NoBorderButton-sc-1hp5vxi-0 c0"
    data-testid="plp-tabbed-filter-button-gender"
  >
    <div
      class="components__CenteredFlexContainer-sc-1hp5vxi-7 c1"
    >
      <p
        class="MuiTypography-root c2 MuiTypography-body1"
      >
        Gender
      </p>
    </div>
  </button>
</DocumentFragment>
`;
